Update deployment ready

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>Deployed in azure</h1>
     <h1>Søk etter firmaer</h1>
 
     <div th:if="${user == null}">
